tests/fixtures/valid/multi/injectable_index_basic/src/lib/main.gcl
// main.gcl -- imports lib with a concrete index binding
index MyPhase = { Design, Build };

include lib.lib(Phase: MyPhase { }, cost: {
    MyPhase.Design: 10.0,
    MyPhase.Build: 20.0,
}).{ total };

node result: Dimensionless = @total;
